[package]
name = "discord-timestamps-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
chrono = {version = "0.4.19", features = ["wasmbind"]}
wasm-bindgen = "0.2.80"
web-sys = "0.3.57"
